# LaVidaLuca-App

./: .env.development  .env.example  .env.local  .env.local.example  .env.production  .env.production.example  .env.render.example  .env.staging  .env.vercel.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  CONTRIBUTING.md  DATABASE_SETUP.md  DEPLOIEMENT-RESUME.md  DEPLOIEMENT.md  DEPLOY.md  DEPLOYMENT-CONFIG.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ACCELERATION.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS_FINALES.md  LICENSE  LaVidaLuca.code-workspace  MIGRATION_NETLIFY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PROJECT_STATUS.md  README.md  (+28 more)
apps/backend/: .coveragerc  .env.example  .env.production  .env.template  .env.test  .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  MODELS_README.md  OPENAPI_DOCUMENTATION.md  README.md  TESTING.md  TEST_SUITE_SUMMARY.md  __init__.py  agri_assistant_server.py  alembic.ini  app_simple.py  auth.py  cli.py  config.py  database.py  demo.db  demo_complete_system.py  docker-compose.yml  exceptions.py  init.sql  init_db.py  lavidaluca.db  main.py  middleware.py  models.py  monitor_tests.sh  monitoring.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run.py  (+16 more)
apps/backend/ai/: __init__.py  suggestions.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py  50b8a4156bf7_initial_migration.py  add_consultations_table_add_consultations_table.py  add_profile_model.py  add_user_role.py  c9884c6687d1_add_consultations_table.py
apps/backend/api/: __init__.py  models.py  openapi.py
apps/backend/app/: __init__.py  config.py  database.py  main.py
apps/backend/app/api/: activities.py  api.py  auth.py  deps.py  users.py
apps/backend/app/core/: __init__.py  auth.py  config.py  database.py  deps.py  exceptions.py  monitoring.py  security.py
apps/backend/app/db/: database.py
apps/backend/app/models/: __init__.py  activity.py  base.py  consultation.py  models.py  user.py
apps/backend/app/schemas/: __init__.py  activity.py  auth.py  schemas.py  user.py
apps/backend/app/services/: activity_service.py  auth.py  cache_service.py  gamification_service.py  matching.py  openai_service.py  user_service.py  validation_service.py
apps/backend/app/tests/: conftest.py  factories.py  (+11 more)
apps/backend/auth/: __init__.py  dependencies.py  jwt.py  jwt_handler.py  oauth.py  password.py  sessions.py
apps/backend/docs/: ENHANCED_AUTH.md  README.md  example_client.py  openapi.json  openapi.py  validate_api.py
apps/backend/middleware/: __init__.py  rate_limit.py  security.py
apps/backend/migrations/: env.py
apps/backend/models/: __init__.py  activity.py  agri_consultation.py  audit.py  base.py  consultation.py  contact.py  gamification.py  profile.py  session.py  user.py
apps/backend/monitoring/: __init__.py  logger.py  metrics.py  production.py  sentry_config.py
apps/backend/routers/: __init__.py  activities.py  auth.py  users.py
apps/backend/routes/: __init__.py  activities.py  agri_assistant.py  auth.py  consultations.py  contacts.py  examples.py  gamification.py  guide.py  health.py  locations.py  profiles.py  suggestions.py  users.py
apps/backend/schemas/: __init__.py  activity.py  agri_assistant.py  auth.py  common.py  consultation.py  contact.py  errors.py  gamification.py  profile.py  rate_limits.py  user.py
apps/backend/services/: __init__.py  audit_service.py  gamification_service.py  openai_service.py  session_service.py  two_factor_service.py  user_management_service.py
apps/backend/src/: __init__.py  activities.py  config.py  database.py  main.py  models.py  schemas.py
apps/backend/tests/: README.md  __init__.py  conftest.py  conftest.py.backup  conftest_enhanced.py  test_activities.py  test_api.py  test_auth.py  test_db.py  test_enhanced_auth.py  test_health_guide.py  test_integration.py  test_main.py  test_performance.py  test_profiles.py  test_security.py  test_services.py  test_users.py
apps/ia/: .env.example  .flake8  .gitignore  API_DOCUMENTATION.md  Dockerfile  Procfile  README.md  TEST_RESULTS.md  alembic.ini  auth.py  config.py  create_sample_data.py  database.py  demo.sh  dev.sh  docker-compose.yml  frontend-integration.ts  init_db.py  lavidaluca.db  main.py  models.py  pyproject.toml  pytest.ini  recommendations.py  render.md  render.yaml  requirements-dev.txt  requirements.txt  run.py  schema.sql  schemas.py  seed_data.py  seed_database.py  setup.cfg  start.sh  startup.py  test.db  test_api.py  test_integration.py
apps/ia/alembic/: env.py
apps/ia/api/: __init__.py
apps/ia/app/: __init__.py  config.py  database.py  init_db.py  main.py  models.py
apps/ia/auth/: security.py
apps/ia/database/: __init__.py  models.py
apps/ia/routers/: activities.py  auth.py  profiles.py  recommendations.py  users.py
apps/ia/schemas/: activity.py  auth.py  recommendation.py  user.py
apps/ia/services/: recommendation.py
apps/ia/tests/: __init__.py  conftest.py  test_activities.py  test_ai.py  test_api.py  test_auth.py  test_integration.py  test_main.py  test_middleware.py  test_registrations.py  test_users.py
(+745 files in other folders)
